# ComfyUI-UniWorld-jd17

./: README.md  __init__.py  pyproject.toml  requirements.txt  siglip2.py  uniworld_encoder_node.py  uniworld_sampler.py
.github/workflows/: publish.yml
assets/: extract_uniworld_nf4_weights.py  extract_uniworld_weights.py
assets/bf16/: config.json
assets/nf4/: config.json
univa/eval/: configuration_eval.py
univa/eval/gedit/: gedit.yaml  step1_gen_samples.py
univa/eval/geneval/: README.md
univa/eval/imgedit/: step2_basic_bench.py
univa/models/: configuration_univa.py  configuration_univa_denoise_tower.py  configuration_univa_vision_tower.py  modeling_univa.py  modeling_univa_denoise_tower.py  modeling_univa_vision_tower.py
univa/models/qwen2p5vl/: configuration_univa_qwen2p5vl.py  modeling_univa_qwen2p5vl.py
univa/models/qwen2vl/: configuration_univa_qwen2vl.py  modeling_univa_qwen2vl.py
univa/serve/: cli.py
workflow/: uniworld-test.json
